Added parallel worker initialization again.